Align hero CTAs in a single row

--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
     .pill-row{
       margin-top: 26px;
       display:flex;
-      justify-content:space-between;
-      gap:16px;
+      justify-content:center;
+      gap:30px;
       align-items:center;
       flex-wrap:wrap;
     }
@@ -1329,12 +1329,6 @@
     <div class="hero-mockup-wrapper">
       <div class="mockup-shadow" aria-hidden="true"></div>
       <img class="mockup" src="screens.png" alt="Interface Facture.mu">
-
-      <div class="hero-cta-floating">
-        <button class="cta" type="button" data-register-cta>
-          Essai 15j gratuits
-        </button>
-      </div>
     </div>
 
     <!-- LOGO MRA -->
@@ -1351,8 +1345,11 @@
 
       <div class="pill-row">
         <button class="pill pill-demo" type="button">Voir la Demo</button>
+        <button class="cta" type="button" data-register-cta>Essai 15j gratuits</button>
+        <a class="pill" href="#fonctionnalites">Voir les fonctionnalités</a>
+      </div>
 
-        <div class="rating">
+      <div class="rating">
 <div class="stars">
   <img src="Icon awesome-star.svg" alt="star">
   <img src="Icon awesome-star.svg" alt="star">
@@ -1361,12 +1358,7 @@
   <img src="Icon awesome-star.svg" alt="star">
 </div>
 
-          <small>95% des utilisateurs disent « plus rapide qu’Excel! »</small>
-        </div>
-
-        <a class="pill" href="#fonctionnalites">
-          Voir les fonctionnalités
-        </a>
+        <small>95% des utilisateurs disent « plus rapide qu’Excel! »</small>
       </div>
     </div>
   </section>
