--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
       place-items:center;
     }
 
+    .logo-animation{
+      width:170px;
+      height:42px;
+      display:block;
+    }
+
     .brand .name{
       font-weight:800;
       font-size:28px;
@@ -1265,7 +1271,7 @@
   <div class="container">
     <div class="topbar">
       <div class="brand">
-        <img src="logo.png" alt="Facture.mu" style="height:42px;">
+        <div class="logo-animation" data-animation="2.json" role="img" aria-label="Facture.mu"></div>
       </div>
 
       <button class="menu-toggle" type="button" aria-label="Ouvrir le menu" aria-expanded="false">
@@ -1676,8 +1682,25 @@
   </div>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
+    if (window.lottie) {
+      const logoAnimations = document.querySelectorAll('.logo-animation');
+      logoAnimations.forEach(container => {
+        window.lottie.loadAnimation({
+          container,
+          renderer: 'svg',
+          loop: false,
+          autoplay: true,
+          path: container.dataset.animation || '2.json',
+          rendererSettings: {
+            preserveAspectRatio: 'xMidYMid meet'
+          }
+        });
+      });
+    }
+
     const items = document.querySelectorAll('.func-item');
     const image = document.getElementById('func-image');
 
@@ -1774,7 +1797,7 @@
 
     <!-- LOGO -->
     <div class="footer-brand">
-      <img src="logo.png" alt="Facture.mu" class="footer-logo">
+      <div class="logo-animation" data-animation="2.json" role="img" aria-label="Facture.mu"></div>
       <p class="footer-tagline">El dorado de la facturation</p>
     </div>
 
