--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     @keyframes lottieEntrance{
       0%{opacity:0; transform: translateX(-66px);}
       70%{opacity:1; transform: translateX(18px);}
+      85%{opacity:1; transform: translateX(-10px);}
       100%{opacity:1; transform: translateX(0);}
     }
 
