--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
     .menu-toggle.is-active span:nth-child(3){top: 25px; transform: rotate(-45deg);}
 
     @media (max-width: 900px){
-      .topbar{flex-wrap:wrap;}
+      .topbar{flex-wrap:nowrap;}
+
+      .brand{min-width:0;}
+
+      .menu-toggle{margin-left:auto;}
 
       nav,
       .actions{
