Fix mobile logo alignment

--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@
 
       .topbar{flex-wrap:nowrap;}
 
-      .brand{min-width:0;}
+      .brand{
+        min-width:0;
+        align-self: flex-start;
+        justify-content: flex-start;
+      }
 
       .menu-toggle{margin-left:auto;}
 
