--- a/index.html
+++ b/index.html
@@ -1380,9 +1380,9 @@
         <button class="cta" type="button" data-register-cta>Essai 15j gratuits</button>
         <a class="pill" href="#fonctionnalites">Voir les fonctionnalités</a>
       </div>
-      <p class="title">Conçu pour les entreprises qui opèrent à Maurice et au-delà</p>
+      <p class="title" style=" margin-top: 50px; ">Conçu pour les entreprises qui opèrent à Maurice et au-delà</p>
       <div class="rating">
-<div class="stars">
+<div class="stars" style=" margin-top: 30px; ">
   <img src="Icon awesome-star.svg" alt="star">
   <img src="Icon awesome-star.svg" alt="star">
   <img src="Icon awesome-star.svg" alt="star">
@@ -1390,7 +1390,7 @@
   <img src="Icon awesome-star.svg" alt="star">
 </div>
 
-        <small>95% des utilisateurs disent « plus rapide qu’Excel! »</small>
+        <small style=" margin-top: 30px; ">95% des utilisateurs disent « plus rapide qu’Excel! »</small>
       </div>
     </div>
   </section>
