Update footer logo to use static image
Replaced logo animation with static logo image.

--- a/index.html
+++ b/index.html
@@ -1824,8 +1824,8 @@
   <div class="container footer-grid">
 
     <!-- LOGO -->
-    <div class="footer-brand">
-      <div class="logo-animation" data-animation="2.json" role="img" aria-label="Facture.mu"></div>
+  <div class="footer-brand">
+      <img src="logo.png" alt="Facture.mu" class="footer-logo">
       <p class="footer-tagline">El dorado de la facturation</p>
     </div>
 
