--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
 
     <div class="hero-content">
       <h1>
-        Facturation simplifiée pour les<br>
+        xxFacturation simplifiée pour les<br>
         entreprises qui grandissent à Maurice
       </h1>
 
