--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
 
     <div class="hero-content">
       <h1>
-        xzFacturation simplifiée pour les<br>
+        xxFacturation simplifiée pour les<br>
         entreprises qui grandissent à Maurice
       </h1>
 
@@ -1736,7 +1736,7 @@ if (window.lottie) {
   const RETURN_SPEED  = 0.8;
   const TURN_FRAME    = 70;
   const HOLD_TIME     = 400;
-  const FINAL_FRAME   = 116;
+  const FINAL_FRAME   = 82;
 
 animation.addEventListener('DOMLoaded', () => {
   animation.setSpeed(ARRIVAL_SPEED);
