--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
 
     <div class="hero-content">
       <h1>
-        xxFacturation simplifiée pour les<br>
+        xFacturation simplifiée pour les<br>
         entreprises qui grandissent à Maurice
       </h1>
 
@@ -1734,9 +1734,9 @@ if (window.lottie) {
   // ======================
   const ARRIVAL_SPEED = 1;
   const RETURN_SPEED  = 0.8;
-  const TURN_FRAME    = 70;
+  const TURN_FRAME    = 118;
   const HOLD_TIME     = 400;
-  const FINAL_FRAME   = 82;
+  const FINAL_FRAME   = 118;
 
 animation.addEventListener('DOMLoaded', () => {
   animation.setSpeed(ARRIVAL_SPEED);
