--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
 
     <div class="hero-content">
       <h1>
-        zzFacturation simplifiée pour les<br>
+        xxFacturation simplifiée pour les<br>
         entreprises qui grandissent à Maurice
       </h1>
 
@@ -1732,7 +1732,7 @@ if (window.lottie) {
   // ======================
   // PARAMETROS
   // ======================
-  const ARRIVAL_SPEED = 0.85;
+  const ARRIVAL_SPEED = 0.9;
   const RETURN_SPEED  = 0.8;
   const TURN_FRAME    = 118;
   const HOLD_TIME     = 400;
