--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
 
     <div class="hero-content">
       <h1>
-        Facturation simplifiée pour les<br>
+        xx Facturation simplifiée pour les<br>
         entreprises qui grandissent à Maurice
       </h1>
 
@@ -1733,7 +1733,7 @@ if (window.lottie) {
   // PARAMETROS
   // ======================
   const ARRIVAL_SPEED = 0.6;
-  const RETURN_SPEED  = 1.5;
+  const RETURN_SPEED  = 1;
   const TURN_FRAME    = 118;
   const HOLD_TIME     = 400;
   const FINAL_FRAME   = 118;
