--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
 
     <div class="hero-content">
       <h1>
-        xx Facturation simplifiée pour les<br>
+        x Facturation simplifiée pour les<br>
         entreprises qui grandissent à Maurice
       </h1>
 
@@ -1732,8 +1732,8 @@ if (window.lottie) {
   // ======================
   // PARAMETROS
   // ======================
-  const ARRIVAL_SPEED = 0.6;
-  const RETURN_SPEED  = 0.5;
+  const ARRIVAL_SPEED = 0.9;
+  const RETURN_SPEED  = 0.7;
   const TURN_FRAME    = 118;
   const HOLD_TIME     = 400;
   const FINAL_FRAME   = 118;
