--- a/index.html
+++ b/index.html
@@ -1410,13 +1410,13 @@
       <div class="features-grid">
 
         <div class="feature-item">
-          <img src="img-facture.png" alt="">
-          <p>Devis & Factures<br>en 2 minutes</p>
+          <img src="img-pincel.png" alt="">
+          <p>Devis & Factures<br>personnalisables</p>
         </div>
 
         <div class="feature-item">
-          <img src="img-pincel.png" alt="">
-          <p>Personnalisez<br>Avec votre logo</p>
+          <img src="img-export.png" alt="">
+          <p>Export & Import<br>de vos données</p>
         </div>
 
         <div class="feature-item">
