--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,7 @@
 
       <!-- COLUMNA IZQUIERDA -->
       <div class="func-list">
-        <button class="func-item active" data-image="func-1.png">Personnaliser factures</button>
+        <button class="func-item active" data-image="func-1.png">Faire des Devis et les transformer en Factures</button>
         <button class="func-item" data-image="func-2.png">Créer factures</button>
         <button class="func-item" data-image="func-3.png">Superviser factures</button>
         <button class="func-item" data-image="func-4.png">Envoyer factures</button>
