--- a/index.html
+++ b/index.html
@@ -1482,14 +1482,15 @@
 
       <!-- COLUMNA IZQUIERDA -->
       <div class="func-list">
-        <button class="func-item active" data-image="func-1.png">Faire des Devis et les transformer en Factures</button>
-        <button class="func-item" data-image="func-2.png">Créer factures</button>
-        <button class="func-item" data-image="func-3.png">Superviser factures</button>
-        <button class="func-item" data-image="func-4.png">Envoyer factures</button>
-        <button class="func-item" data-image="func-5.png">Contrôler état factures</button>
-        <button class="func-item" data-image="func-6.png">Télécharger factures PDF</button>
-        <button class="func-item" data-image="func-7.png">Connecter factures au comptable</button>
-        <button class="func-item" data-image="func-8.png">Factures depuis mobile</button>
+        <button class="func-item active" data-image="func-1.png">Faites Devis, Factures et Reçus</button>
+        <button class="func-item" data-image="func-2.png">Transformez Devis en Factures</button>
+        <button class="func-item" data-image="func-3.png">Envoyez-les par email ou Whatsapp</button>
+        <button class="func-item" data-image="func-4.png">Suivez les paiement des factures</button>
+        <button class="func-item" data-image="func-5.png">Relancez les impayés automatiquement</button>
+        <button class="func-item" data-image="func-6.png">Peronnalisez le design des factures</button>
+        <button class="func-item" data-image="func-7.png">Donnez un accès à vos collaborateurs</button>
+      <!-- <button class="func-item" data-image="func-8.png">Avec un support réactif</button> -->
+
       </div>
 
       <!-- COLUMNA DERECHA -->
