--- a/index.html
+++ b/index.html
@@ -1664,34 +1664,31 @@
       </details>
 
       <details class="faq-item">
-        <summary>Comment gérez-vous les différentes devises (USD, EUR, MUR, etc.) ?</summary>
+        <summary>Puis-je facturer en différentes devises (USD, EUR, MUR, etc.) ?</summary>
         <p>
-          Facture.mu supporte plus de 160 devises avec gestion claire des montants
-          et taux, adaptés aux besoins locaux et internationaux.
+          Oui. Facture.mu supporte plus de 160 devises avec choix d'affichage et taux, adaptés aux besoins locaux et internationaux.
         </p>
       </details>
 
       <details class="faq-item">
         <summary>Puis-je importer mes données depuis mon système actuel ?</summary>
         <p>
-          Oui, vous pouvez importer vos clients, produits et factures depuis Excel
-          ou d’autres systèmes existants.
+          Oui, vous pouvez importer vos clients et vos articles au format Excel.
         </p>
       </details>
 
       <details class="faq-item">
-        <summary>Quelle est la politique de confidentialité des données ?</summary>
+        <summary>Puis-je gérer la TVA avec Facture.mu</summary>
         <p>
-          Vos données sont sécurisées et hébergées selon des standards élevés.
-          Elles ne sont jamais revendues à des tiers.
+          Oui. Facture.mu vous permet de facturer avec ou sans TVA, définir plusieurs taux si nécessaire, ajouter des frais et des remises également.
         </p>
       </details>
 
       <details class="faq-item">
-        <summary>Puis-je utiliser mon logo et mes couleurs ?</summary>
+        <summary>Puis-je utiliser mon logo et ma charte de couleurs ?</summary>
         <p>
           Oui, vous pouvez personnaliser vos factures avec votre logo, vos couleurs
-          et votre identité visuelle.
+          et vous pouvez même modifier/ ajouter des informations à vos documents.
         </p>
       </details>
 
@@ -1707,7 +1704,7 @@
         <summary>Est-ce adapté aux équipes ?</summary>
         <p>
           Oui. Facture.mu permet de gérer plusieurs utilisateurs avec des rôles
-          et permissions adaptés.
+          et permissions que vous paraméterez.
         </p>
       </details>
 
@@ -1715,7 +1712,7 @@
         <summary>Y a-t-il un support ?</summary>
         <p>
           Oui, notre équipe support est disponible pour vous accompagner
-          par email et via le centre d’aide.
+          par chat, email et via le centre d’aide.
         </p>
       </details>
 
