--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
 
   <section class="features-section">
   <div class="container">
-          <img src="Grupo 4930.png" alt="" class="activity-icon">
+          <img src="mechas.svg" alt="" class="activity-icon">
 
     <h2 class="features-title">
       Tout ce dont vous avez besoin pour facturer sereinement
@@ -1471,7 +1471,7 @@
   <div class="container">
 
     <div class="functionalities-header">
-      <img src="Grupo 4930.png" alt="" class="activity-icon">
+      <img src="mechas.svg" alt="" class="activity-icon">
       <h2>Fonctionnalités</h2>
       <p>
         Une plateforme moderne pensée pour l’écosystème business mauricien et international
@@ -1506,7 +1506,7 @@
   <div class="container">
 
     <div class="activity-header">
-      <img src="Grupo 4930.png" alt="" class="activity-icon">
+      <img src="mechas.svg" alt="" class="activity-icon">
       <h2>Pour votre activité</h2>
       <p>
         Une plateforme moderne pensée pour l’écosystème business mauricien et international
@@ -1551,7 +1551,7 @@
   <div class="container">
 
     <div class="testimonials-header">
-      <img src="Grupo 4930.png" alt="" class="testimonials-icon">
+      <img src="mechas.svg" alt="" class="testimonials-icon">
       <h2>Témoignages</h2>
       <p>Plus de 200 000 entreprises font confiance à Invoice Ninja</p>
     </div>
@@ -1631,7 +1631,7 @@
   <div class="container">
     <div class="final-cta-box">
 
-      <img src="Grupo 4930.png" alt="" class="final-cta-icon">
+      <img src="mechas.svg" alt="" class="final-cta-icon">
 
       <h2>Commencez à facturer dès aujourd’hui&nbsp;!</h2>
       <p>Facturez vos clients, soyez payé rapidement&nbsp;!</p>
@@ -1648,7 +1648,7 @@
   <div class="container">
 
     <div class="faq-header">
-      <img src="Grupo 4930.png" alt="" class="faq-icon">
+      <img src="mechas.svg" alt="" class="faq-icon">
       <h2>Questions fréquentes</h2>
       <p>Posez-nous vos questions</p>
     </div>
