--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@
       <nav aria-label="Navigation">
         <a href="#fonctionnalites">Fonctionnalités</a>
         <a href="#">Comment ça marche</a>
-        <a href="#">Tarifs</a>
+        <a href="tarifs.html">Tarifs</a>
         <a href="#faq">FAQ</a>
       </nav>
 
@@ -1984,7 +1984,7 @@ animation.addEventListener('DOMLoaded', () => {
         <h4>Produit</h4>
         <a href="#fonctionnalites">Fonctionnalités</a>
         <a href="#">Comment ça marche</a>
-        <a href="#">Tarifs</a>
+        <a href="tarifs.html">Tarifs</a>
       </div>
 
       <div class="footer-column">
