--- a/tarifs.html
+++ b/tarifs.html
@@ -808,7 +808,7 @@
           </article>
 
           <article class="price-card price-card--green">
-            <h3>Ninja Pro*</h3>
+            <h3>Facture Pro*</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
               <span data-monthly="$14" data-annual="$140">$140</span>
@@ -821,7 +821,7 @@
             <div class="feature-heading">ALL FREE FEATURES +</div>
             <ul class="feature-list feature-list--tight">
               <li>Unlimited Clients & Invoices</li>
-              <li>Remove “Created by Invoice Ninja”</li>
+              <li>Remove “Created by Facture.mu”</li>
               <li>Email Invoices via Gmail & MSN</li>
               <li>Email Invoices via your custom SMTP</li>
               <li>Branded URL: “YourSite”.invoicing.co</li>
@@ -878,7 +878,7 @@
               <span data-monthly="From $280 annual*" data-annual="From $280*">From $280*</span>
             </div>
             <div class="price-contact" data-monthly="Let’s talk!" data-annual="Let’s talk!">Let’s talk!</div>
-            <a class="price-link" href="mailto:concierge@invoiceninja.com">concierge@invoiceninja.com <span>↗</span></a>
+            <a class="price-link" href="mailto:info@facture.mu">info@facture.mu<span>↗</span></a>
             <div class="divider"></div>
             <div class="feature-heading">All FEATURES +</div>
             <ul class="feature-list feature-list--premium">
