--- a/tarifs.html
+++ b/tarifs.html
@@ -633,7 +633,7 @@
     .site-footer{
       border-top: 1px solid #e5e7eb;
       padding-top: 50px;
-      background: #ffffff;
+      background: #F3F3F3;
     }
 
     .footer-grid{
